# lox-rs

./: Cargo.toml  README.md  syntax
clox/: Makefile  chunk.c  chunk.h  common.c  common.h  debug.c  memory.c  memory.h  value.c
ex/: break-ex.lox  class_getters.lox  class_inherit_leak.lox  class_init.lox  class_leak.lox  class_static.lox  class_test.lox  class_this_outside.lox  file_test.lox  fun.lox  fun_anon.lox  fun_closures.lox  fun_fib.lox  fun_rec.lox  fun_scopes.lox  fun_test.lox  mixins.lox  mixins2.lox  resolver_test.lox  resolver_test_double_init.lox  resolver_test_init.lox  resolver_test_return.lox  resolver_unused_variable.lox  superclass.lox  test1.lox  test2.lox  test3.lox  test4.lox  test_fun.lox  test_fun_env.lox
src/: ast.rs  function.rs  interpreter.rs  lexer.rs  main.rs  native.rs  object.rs  parser.rs  resolver.rs
src/native/: basic.rs  mod.rs  utils.rs
src/tests/: parser.rs
