[package]
name = "craftinginterpreters"
version = "0.1.0"
authors = ["plates"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-utils = "0.1.2"
strum = "0.20"
strum_macros = "0.20"
gcmodule = { version = "0.3" }#, features = ["debug"] }
newtype-enum = "0.1"
#bacon_rajan_cc = "0.3"
